# configuration-manager

./: README.md  build.sh
src/: server.cpp
src/client_side/: CMakeLists.txt  client.cpp
src/server_side/: CMakeLists.txt  server.cpp
